# hw-02

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml  coverage.yml  lint.yml
include/: Matrix.h  matrix.h  matrix.tpp
src/: Matrix.cpp  main.cpp  matrix.cpp
test/: matrix_test.cpp
